<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>

    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="minus" translatable="false">-</string>
    <string name="divide" translatable="false">÷</string>
    <string name="plus" translatable="false">+</string>
    <string name="multiply" translatable="false">×</string>
    <string name="power">^</string>
    <string name="percent">%</string>
</resources>